--- a/server/app/views/index.ejs
+++ b/server/app/views/index.ejs
@@ -8,7 +8,7 @@
     <title>Autoponics Dashboard</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/master/build/css/bootstrap-datetimepicker.min.css">
@@ -244,7 +244,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdn.rawgit.com/walmik/timer.jquery/master/dist/timer.jquery.min.js" type="text/javascript"></script>
     <script src="http://momentjs.com/downloads/moment.js"></script>
@@ -261,9 +261,9 @@
                 #new-temp
                 #update-temp
             */
-            var test = true; // update
-            var feedTimer = 0; // 
-            var waterTimer = 0; //  
+            var test = false; // update
+            var feedTimer = 0; //
+            var waterTimer = 0; //
             var currentTemp = 0; // in farenheit
             var lightOn = false;
             var lightOnTime = 6;
@@ -485,7 +485,7 @@
                             console.log(data); // for debugging purposes, probably.
                         }, "json");
                     }
-                    
+
                 } else {
                     lightOn = !lightOn;
                     updateLight();
@@ -516,7 +516,7 @@
                             console.log(data); // for debugging purposes, probably.
                         }, "json");
                     }
-                    
+
                 } else {
                     pumpOn = !pumpOn;
                     updatePump();
@@ -538,7 +538,7 @@
                             console.log(data); // for debugging purposes, probably.
                         }, "json");
                     }
-                    
+
                 } else {
                     ventOn = !ventOn;
                     updateVent();
